# simavr

./: .gitignore  CMakeLists.txt  Makefile.common
examples/: CMakeLists.txt
examples/board_usi/: CMakeLists.txt  Makefile  attiny4313_usi.c  usi  usi.c
simavr/: .gitignore  CMakeLists.txt  sim_core_config.c
simavr/cores/: CMakeLists.txt  sim_tiny2313a.c  sim_tiny4313.c  sim_tinyx313a.c  sim_tinyx313a.h  sim_tinyx4.c  sim_tinyx4.h  sim_tinyx5.h
simavr/sim/: CMakeLists.txt  avr_ioport.c  avr_usi.c  avr_usi.h
